[package]
name = "mml-lib"
version = "1.0.9"
description = "Rust implementation of the Emacs MIME message Meta Language (MML)"
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/mml-lib/latest/mml/"
repository = "https://git.sr.ht/~soywod/pimalaya/tree/master/item/mml/README.md"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["email", "text-processing"]
keywords = ["email", "mime", "message", "mml", "emacs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--document-private-items"]

[lib]
name = "mml"

[features]
default = [
  "compiler",
  "interpreter",
  
  # "pgp-commands",
  # "pgp-gpg",
  # "pgp-native",
  
  # "derive",
]
compiler = ["dep:chumsky", "dep:shellexpand-utils", "dep:tree_magic_mini"]
interpreter = ["dep:nanohtml2text"]

pgp = []
pgp-commands = ["pgp", "dep:process-lib"]
pgp-gpg = ["pgp", "dep:gpgme"]
pgp-native = ["pgp", "dep:pgp-lib", "dep:secret-lib", "dep:shellexpand-utils"]

derive = ["dep:serde", "serde/derive", "process-lib/derive", "secret-lib/derive"]

[dev-dependencies]
concat-with = "0.2"
env_logger = "0.10"
tempfile = "3.8"
tokio = { version = "1.23", features = ["full"] }

[dependencies]
async-recursion = "1"
gpgme = { version = "0.11", optional = true }
log = "0.4"
mail-builder = "0.3"
mail-parser = "0.9"
nanohtml2text = { version = "0.1", optional = true }
pgp-lib = { version = "=0.2.0", optional = true }
process-lib = { version = "=0.4.2", optional = true }
secret-lib = { version = "=0.4.3", optional = true }
serde = { version = "1", optional = true }
shellexpand-utils = { version = "=0.2.1", optional = true }
thiserror = "1"
tree_magic_mini = { version = "3", optional = true }

[target.'cfg(unix)'.dependencies]
chumsky = { version = "=1.0.0-alpha.7", optional = true, features = ["label"] }

[target.'cfg(windows)'.dependencies]
chumsky = { version = "=1.0.0-alpha.7", optional = true, default-features = false, features = ["std", "label"] }
