[package]
name = "oauth-lib"
version = "0.1.0"
description = "Rust library to deal with OAuth flows."
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["network-programming", "authentication"]
keywords = ["oauth", "oauth2", "authorization", "xoauth2", "oauthbearer"]
metadata.docs.rs.all-features = true

[lib]
name = "oauth"

[dev-dependencies.tokio]
version = "1.23"
default-features = false
features = ["macros", "rt"]

[dependencies.log]
version = "0.4"

[dependencies.oauth2]
version = "4.3"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dependencies.thiserror]
version = "1.0"

[dependencies.tokio]
version = "1.23"
default-features = false
features = ["io-util", "net"]

[dependencies.url]
version = "2.3"
