[package]
name = "oauth-lib"
description = "Asynchronous Rust library to deal with OAuth flows"
version = "2.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["asynchronous", "authentication", "network-programming"]
keywords = ["oauth", "oauth2", "authorization", "xoauth2", "oauthbearer"]
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/oauth-lib/latest/oauth/"
repository = "https://github.com/pimalaya/core/tree/master/oauth/"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "oauth"

[features]
default = [
  "tokio",
  #"async-std",
  "rustls",
  #"native-tls",
  #"vendored",
]

# Async runtime
#
tokio = ["dep:tokio", "http-lib/tokio"]
async-std = ["dep:async-std", "http-lib/async-std"]

# Rust crypto
#
rustls = ["http-lib/rustls"]
native-tls = ["http-lib/native-tls"]

# Vendored (mostly for OpenSSL)
#
vendored = ["http-lib/vendored"]

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes"] }
test-log = { version = "0.2", default-features = false, features = ["color", "trace"] }
tokio = { version = "1.23", features = ["full"] }

[dependencies]
async-std = { version = "1.13", optional = true }
http-lib = { version = "0.1", default-features = false, path = "../http" }
oauth2 = { version = "5.0.0-rc.1", default-features = false }
thiserror = "2"
tokio = { version = "1.23", optional = true, default-features = false, features = ["io-util", "net", "rt-multi-thread"] }
tracing = "0.1"
