[package]
name = "pimalaya-oauth2"
version = "0.0.5-beta"
description = "Rust library to simplify OAuth2 flows."
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["network-programming", "authentication"]
keywords = ["pim", "oauth2", "authorization", "xoauth2", "oauthbearer"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "pimalaya_oauth2"

[dev-dependencies]
tokio = { version = "1.23", default-features = false, features = ["macros", "rt"] }

[dependencies]
log = "0.4"
oauth2 = "4.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
thiserror = "1.0"
tokio = { version = "1.23", default-features = false, features = ["io-util", "net"] }
url = "2.3"
