[package]
name = "pgp-lib"
version = "0.2.0"
description = "Rust library to deal with PGP operations"
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/pgp-lib/latest/pgp/"
repository = "https://git.sr.ht/~soywod/pimalaya/tree/master/item/pgp/README.md"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["pgp", "openpgp", "encrypt", "decrypt", "sign"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]

[features]
default = []
key-discovery = [
    "dep:async-recursion",
    "dep:futures",
    "dep:hyper",
    "dep:hyper-rustls",
    "dep:log",
    "dep:sha1",
    "dep:z-base-32",
]

[lib]
name = "pgp"

[dev-dependencies]
concat-with = "0.2"
env_logger = "0.10"
tempfile = "3.3"
tokio = { version = "1.23", default-features = false, features = ["macros", "rt"] }

[dependencies]
pgp_native = { version = "0.10", package = "pgp" }
rand = "0.8"
smallvec = "1"
thiserror = "1"
tokio = { version = "1.23", default-features = false, features = ["rt"] }
url = "2.4"

# Optional deps - 'http'
async-recursion = { version = "1",  optional = true }
futures = { version = "0.3", optional = true }
hyper = { version = "0.14", default-features = false, features = [ "http1", "http2" ], optional = true }
hyper-rustls = { version = "0.24", optional = true }
log = { version = "0.4", optional = true }
sha1 = { version = "0.10", optional = true }
z-base-32 = { version = "0.1", optional = true }
