[package]
name = "process-lib"
version = "0.1.0"
description = "Rust library to run cross-platform, asynchronous processes in pipelines."
homepage = "https://pimalaya.org/"
repository = "https://git.sr.ht/~soywod/pimalaya/"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["asynchronous"]
keywords = ["command", "process", "pipeline", "cross-platform", "async"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "process"

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1.23", default-features = false, features = ["macros", "rt"] }

[dependencies]
anyhow = "1.0"
log = "0.4"
once_cell = "1"
thiserror = "1.0"
tokio = { version = "1.23", default-features = false, features = ["io-util", "process"] }
