[package]
name = "process-lib"
version = "0.3.0"
description = "Cross-platform, asynchronous Rust library to run commands in pipelines"
homepage = "https://pimalaya.org/"
repository = "https://git.sr.ht/~soywod/pimalaya/tree/master/item/process/README.md"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["asynchronous"]
keywords = ["command", "process", "pipeline", "cross-platform", "async"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "process"

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1.23", default-features = false, features = ["macros", "rt"] }

[dependencies]
log = "0.4"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
tokio = { version = "1.23", default-features = false, features = ["io-util", "process"] }
