[package]
name = "process-lib"
description = "Cross-platform, asynchronous Rust library to run commands in pipelines"
version = "1.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["asynchronous"]
keywords = ["command", "process", "pipeline", "cross-platform", "async"]
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/process-lib/latest/process/"
repository = "https://github.com/pimalaya/core/tree/master/process/"

[package.metadata.docs.rs]
features = ["derive"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "process"

[features]
default = [
  "tokio",
  #"async-std",
  #"derive",
]

# Async runtime
#
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]

# Serde (de)serialization
#
derive = ["dep:serde"]

[dev-dependencies]
async-std = { version = "1.13", features = ["unstable", "attributes"] }
test-log = { version = "0.2", default-features = false, features = ["color", "trace"] }
tokio = { version = "1.23", features = ["full"] }

[dependencies]
async-std = { version = "1.13", optional = true, default-features = false, features = ["std", "log", "unstable"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "2"
tokio = { version = "1.23", optional = true, default-features = false, features = ["io-util", "process"] }
tracing = "0.1"
