[package]
name = "secret-lib"
version = "0.4.6"
description = "Rust library to retrieve secrets from different sources"
homepage = "https://pimalaya.org/"
repository = "https://git.sr.ht/~soywod/pimalaya/tree/master/item/secret/README.md"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["secret", "keyutil", "keyring", "credential", "password"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--document-private-items"]

[lib]
name = "secret"

[features]
default = [
  "command",

  "keyring-tokio",
  # "keyring-tokio-openssl",
  # "keyring-async-io",
  # "keyring-async-io-openssl",
  
  # "derive",
]

command = ["dep:process-lib"]

keyring = []
keyring-tokio = ["keyring", "keyring-lib/tokio"]
keyring-tokio-openssl = ["keyring", "keyring-lib/tokio-openssl"]
keyring-async-io = ["keyring", "keyring-lib/async-io"]
keyring-async-io-openssl = ["keyring", "keyring-lib/async-io-openssl"]

derive = ["dep:serde", "serde/derive", "process-lib?/derive", "keyring-lib?/derive"]

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1.23", features = ["full"] }

[dependencies]
keyring-lib = { version = "=0.4.3", optional = true }
log = "0.4"
process-lib = { version = "=0.4.2", optional = true }
serde = { version = "1", optional = true }
thiserror = "1"
