[package]
name = "secret-lib"
description = "Cross-platform, asynchronous Rust library to retrieve secrets from different sources"
version = "1.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["asynchronous"]
keywords = ["password", "credential", "keychain", "keyring", "secret"]
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/secret-lib/latest/secret/"
repository = "https://github.com/pimalaya/core/tree/master/secret/"

[package.metadata.docs.rs]
features = ["derive"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "secret"

[features]
default = [
  "tokio",
  #"async-std",
  "rustls",
  #"openssl",
  "command",
  "keyring",
  #"derive",
  #"vendored",
]

# Async runtime
#
tokio = ["keyring-lib?/tokio", "process-lib?/tokio"]
async-std = ["keyring-lib?/async-std", "process-lib?/async-std"]

# Rust crypto
#
rustls = ["keyring-lib?/rustls"]
openssl = ["keyring-lib?/openssl"]

# Secret backends
#
command = ["dep:process-lib"]
keyring = ["dep:keyring-lib"]

# Serde (de)serialization
#
derive = ["dep:serde", "keyring-lib?/derive", "process-lib?/derive"]

# Vendored (mostly for OpenSSL)
#
vendored = ["keyring-lib?/vendored"]

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes"] }
test-log = { version = "0.2", default-features = false, features = ["color", "trace"] }
tokio = { version = "1.23", features = ["full"] }

[dependencies]
keyring-lib = { version = "1", optional = true, default-features = false, path = "../keyring" }
process-lib = { version = "1", optional = true, default-features = false, path = "../process" }
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "2"
tracing = "0.1"
