[package]
name = "stoptls"
version = "0.1.0"
edition = "2021"

[features]
default = ["async"]
blocking = []
async = ["dep:futures-util"]

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes"] }
env_logger = "0.11"
stoptls = { path = ".", features = ["async", "blocking"] }
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
tracing = { version = "0.1", features = ["log"] }

[dependencies]
futures-util = { version = "0.3", optional = true, default-features = false, features = ["io"] }
tracing = "0.1"
