[package]
name = "stoptls"
version = "0.1.0"
edition = "2021"

[features]
std = []
async-std = ["dep:async-std"]
tokio = ["dep:tokio"]

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes"] }
env_logger = "0.11"
stoptls = { path = ".", features = ["std", "async-std", "tokio"] }
tokio = { version = "1.37", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }

[dependencies]
async-std = { version = "1.13", optional = true }
tokio = { version = "1.37", optional = true, default-features = false, features = ["io-util", "net"] }
tracing = "0.1"
