[package]
name = "time-lib"
version = "0.2.1"
description = "Rust library to manage personal time"
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/time-lib/latest/time/"
repository = "https://git.sr.ht/~soywod/pimalaya/tree/master/item/time/README.md"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["network-programming"]
keywords = ["pim", "pomodoro", "time", "management", "technique"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--document-private-items"]

[lib]
name = "time"

[features]
default = [
  "server",
  "client",
  "tcp",
]

server = ["tokio/sync", "tokio/rt", "tokio/time"]
client = []

tcp-any = ["tokio/net", "tokio/io-util"]
tcp-binder = ["server", "tcp-any"]
tcp-client = ["client", "tcp-any"]
tcp = ["tcp-binder", "tcp-client"]

[dev-dependencies]
env_logger = "0.10"
mock_instant = "0.3"
once_cell = "1"
tokio = { version = "1.23", features = ["full"] }

[dependencies]
async-trait = "0.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.23", optional = true, default-features = false }
